fix: modify familiaTest and funcionarioTest